Theme switcher support
Using the js theme switcher provided on the Bootstrap website and more or less the same dropdown layout.

Made one change to switch to CSS classes for the icons instead of SVGs

Changed the clear data icon to recycle, works a little better on a button without borders

Swapped out a lot of color specific CSS classes on elements, for CSS that targets dark mode (where appropriate)

--- a/_includes/layout/scripts.liquid
+++ b/_includes/layout/scripts.liquid
@@ -1,5 +1,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 <script src="../assets/js/core/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="../assets/js/theme.js"></script>
 {% if page-id != "fourohfour" %}
 <script src="../assets/js/rot.js"></script>
 <script src="../assets/js/clip.js"></script>
