--- a/_includes/partials/ciphers/sub.liquid
+++ b/_includes/partials/ciphers/sub.liquid
@@ -7,28 +7,28 @@
                 <h2 class="display-6 w-100 d-flex m-0">
                     Substitution cipher
                 </h2>
-                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
             </div>
             <hr>
-            <p class="text-dark px-2">
+            <p class="px-2">
                 Where a Caeser cipher simply shifts the position of the alphabet to the left or right a number of times, a substitution cipher uses a key or a phrease to make a new alphabet - the end result potentially being a completely jumbled up alphabet. 
             </p>
-            <p class="text-dark px-2">
+            <p class="px-2">
                 A quick example substitution: 
-                <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     SENTENCE
                 </code> → 
-                <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     TEST
                 </code>
                 → 
-                <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     QBLRBLSB
                 </code> 
                 - The full alphabet would look like 
-                <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     TESABCDFGHIJKLMNOPQRUVWXYZ
                 </code> &ndash; notice that T, E and S have moved to the start, the second T in TEST isn't present again as it has already been used and placed. There is more information available on the <a href="https://en.wikipedia.org/wiki/Substitution_cipher" class="text-convrtr">Substitution cipher</a> Wikipedia page. 
             </p>
@@ -40,7 +40,7 @@
                     <div class="card-body text-center">
                         <textarea placeholder="Example: SENTENCE → TEST [key] → QBLRBLSB" title="Substitution string" rows="6" id="subText" class="form-control sub-cipher"></textarea>
                     </div>
-                    <div class="card-footer text-dark py-3">
+                    <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
