--- a/_includes/partials/home/replace.liquid
+++ b/_includes/partials/home/replace.liquid
@@ -7,12 +7,12 @@
                 <h2 class="display-6 w-100 d-flex m-0">
                     Replace characters
                 </h2>
-                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
             </div>
             <hr>
-            <p class="text-dark px-2">
+            <p class="px-2">
                 Replace characters in a string - allows replace any characters or phrases in a string with any character or phrase. 
                 Supports regex so you can run your own custom advanced replacements
             </p>
@@ -24,7 +24,7 @@
                     <div class="card-body text-center">
                         <textarea placeholder="Example: TESTING → ST → EA → TEASING" title="Replace characters in a string" rows="6" id="replaceText" class="form-control replace-text"></textarea>
                     </div>
-                    <div class="card-footer text-dark py-3">
+                    <div class="card-footer py-3">
                         <div class="text-center mb-2 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-lg-auto me-2 mb-2">
