--- a/_includes/layout/footer.liquid
+++ b/_includes/layout/footer.liquid
@@ -1,4 +1,4 @@
-<footer class="{% if page-id == "fourohfour" %}mt-auto {% endif %}text-dark bg-light">
+<footer class="section footer{% if page-id == "fourohfour" %} mt-auto{% endif %}">
     <div class="mw me-auto ms-auto">
         <div class="p-4 pb-2">
             {% if page-id != "fourohfour" %}
@@ -14,7 +14,7 @@
             </p>
         </div>
         <div class="p-4 pt-2">
-            <abbr title="Release version: v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}" class="d-inline-flex px-2 py-1 fw-semibold text-dark bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
+            <abbr title="Release version: v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}" class="d-inline-flex px-2 py-1 fw-semibold bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
                 <small>v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}</small>
             </abbr>
         </div>
