--- a/_includes/partials/ciphers/rotate.liquid
+++ b/_includes/partials/ciphers/rotate.liquid
@@ -7,12 +7,12 @@
                 <h2 class="display-6 w-100 d-flex m-0">
                     Rotation cipher
                 </h2>
-                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
             </div>
             <hr>
-            <p class="text-dark px-2">
+            <p class="px-2">
                 A very simple method of encription, rotaion ciphers - also known as substution of shift ciphers - replace letters with a different letter at another place in the alphabet. The most common is the Caeser cipher or Rot 13 cipher, more information is available on the <a href="https://en.wikipedia.org/wiki/Caesar_cipher" class="text-convrtr">Caesar_cipher</a> Wikipedia page. 
             </p>
         </div>
@@ -50,7 +50,7 @@
                     <div class="card-body text-center">
                         <textarea placeholder="Example: TEST → YJXY (Rot 5)" title="ROT Text - text to substitute" rows="6" id="rotText" class="form-control rot-text"></textarea>
                     </div>
-                    <div class="card-footer text-dark py-3">
+                    <div class="card-footer py-3">
                         <div class="d-flex justify-content-between align-items-center">
                             <p class="m-0">Results:</p>
                             {% include "components/select-copy-dl" %}
