--- a/_includes/partials/home/flip.liquid
+++ b/_includes/partials/home/flip.liquid
@@ -7,12 +7,12 @@
                 <h2 class="display-6 w-100 d-flex m-0">
                     Flip text
                 </h2>
-                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
             </div>
             <hr>
-            <p class="text-dark px-2">
+            <p class="px-2">
                 Flip text upside down - allows you to turn this into ʇɥıs
             </p>
         </div>
@@ -23,7 +23,7 @@
                     <div class="card-body text-center">
                         <textarea placeholder="Example: TEST → ┴SƎ┴" title="Flip text upside down" rows="6" id="flipText" class="form-control flip-text"></textarea>
                     </div>
-                    <div class="card-footer text-dark py-3">
+                    <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
                             <button type="button" class="btn btn-md btn-convrtr" id="flipDecode" title="Flip text upside down">Flip</button>
                             <div class="form-check form-switch mx-2">
