--- a/_includes/partials/home/home.liquid
+++ b/_includes/partials/home/home.liquid
@@ -3,11 +3,11 @@
         <div class="section-heading">
             <h1 class="display-6">Encoding and Decoding</h1>
             <hr>
-            <p class="text-dark px-2">
+            <p class="px-2">
                 Convrtr is a simple JavaScript based tool to quickly convert text between different formats and to help create or solve data driven puzzles and ciphers.
             </p>
-            <p class="text-dark px-2 m-0">
-                Please note that these tools aren't optimized for large amounts of data, processing can slow down or run into problems once you reach above <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">150,000</code> characters. A cap of 1 million characters is currently in place.
+            <p class="px-2 m-0">
+                Please note that these tools aren't optimized for large amounts of data, processing can slow down or run into problems once you reach above <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">150,000</code> characters. A cap of 1 million characters is currently in place.
             </p>
         </div>
     </div>
