--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,11 @@
     --convrtr-nav-link-padding-y: 0.25rem;
     --convrtr-nav-tabs-border-radius: 0.375rem;
     --convrtr-nav-tabs-border-color: #dee2e6;
+    --convrtr-code-opacity: 0.2;
+    --bs-bg-dark-opacity: 0.08;
+}
+[data-bs-theme="dark"] {
+    --convrtr-base-color: #dee2e6;
 }
 body {
     color: var(--convrtr-base-color);
@@ -44,7 +49,12 @@ body {
 }
 .text-convrtr {
     --bs-text-opacity: 1;
-    color: rgba(var(--convrtr-bg-color-rgb), var(--bs-text-opacity)) !important;
+    color: rgba(var(--convrtr-bg-color-50), var(--bs-text-opacity)) !important;
+}
+@include color-mode(dark) {
+    .text-convrtr {
+        --bs-btn-color: var(--bs-white);
+    }
 }
 .bg-convrtr {
     background-color: var(--convrtr-bg-color);
@@ -54,6 +64,7 @@ body {
     color: var(--bs-white) !important;
     background-color: rgba(var(--convrtr-bg-color-75-rbg), var(--bs-text-opacity)) !important;
 }
+
 .btn-convrtr {
     --bs-btn-font-weight: 600;
     --bs-btn-color: var(--bs-white);
@@ -79,6 +90,12 @@ body {
     --bs-btn-active-color: var(--bs-btn-hover-color);
     --bs-btn-active-bg: var(--convrtr-bg-color-20);
     --bs-btn-active-border-color: var(--convrtr-bg-color-20);
+}
+@include color-mode(dark) {
+    .btn-outline-convrtr {
+        --bs-btn-color: var(--bs-white);
+        --bs-btn-bg: var(--convrtr-bg-color-25);
+    }
 }
 
 .convrtr-spin {
@@ -109,6 +126,19 @@ body {
         display: inline-flex;
         align-self: center;
     }
+}
+
+.bi {
+    width: 1em;
+    height: 1em;
+    vertical-align: -.125em;
+    fill: currentcolor;
+}
+
+.dropdown .bi::before, 
+.dropdown [class^="bi-"]::before, 
+.dropdown [class*=" bi-"]::before {
+    vertical-align: top;
 }
 
 .mw {
@@ -143,6 +173,7 @@ body {
         color: var(--convrtr-bg-color-20);
         background-color: var(--bs-navbar-active-color);
     }
+
     .dropdown-item:active,
     .dropdown-item.active {
         color: var(--bs-navbar-active-color);
@@ -158,9 +189,28 @@ body {
     }
 }
 
+@include color-mode(dark) {
+    .navbar {
+        .show > .nav-link,
+        .nav-link.active {
+            color: var(--bs-dropdown-color);
+            background-color: var(--bs-body-bg);
+            border-color: var(--bs-dropdown-border-color);
+        }
+    }
+}
+
 .section:nth-of-type(odd) {
     --bs-bg-opacity: 1;
     background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+}
+@include color-mode(dark) {
+    .section:nth-of-type(odd) {
+        --bs-bg-opacity: 1;
+        background-color: rgba(var(--bs-body-color-rgb), var(--bs-bg-dark-opacity)) !important;
+    }
+}
+.section:not(.footer):nth-of-type(odd) {
     @include media-breakpoint-up(fhd) {
         border-radius: var(--bs-border-radius-lg);
     }
@@ -172,6 +222,18 @@ body {
 }
 .section-toggle[aria-expanded="true"] .bi::before {
     transform: rotate(-90deg);
+}
+.toggle-button {
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+    --bs-border-opacity: 1;
+    border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
+}
+@include color-mode(dark) {
+    .toggle-button {
+        color: var(--bs-white) !important;
+        background-color: var(--convrtr-bg-color-75-rgb) !important;
+    }
 }
 
 textarea {
@@ -212,6 +274,38 @@ textarea {
     }
 }
 
+@include color-mode(dark) {
+    .page {
+        &-link {
+            color: var(--bs-white);
+        }
+    }
+    .card {
+        background-color: rgba(var(--bs-body-color-rgb), var(--bs-bg-dark-opacity)) !important;
+    }
+}
+
+code {
+    color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
+    background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
+}
+@include color-mode(dark) {
+    code {
+        background-color: rgba(var(--bs-success-rgb), var(--convrtr-code-opacity)) !important;
+    }
+    .btn-light {
+        background-color: rgba(var(--bs-body-color-rgb), var(--bs-bg-dark-opacity)) !important;
+        color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
+        border-color: rgba(var(--bs-body-color-rgb), var(--bs-bg-dark-opacity)) !important;
+        &:hover, &:focus, &:active {
+            background-color: rgba(var(--bs-body-color-rgb), var(--convrtr-code-opacity)) !important;
+        }
+        &:active {
+            color: var(--bs-white);
+        }
+    }
+}
+
 .form-check-input {
     height: 1.75rem;
 }
@@ -246,12 +340,28 @@ textarea {
     }    
 }
 
+@include color-mode(dark) {
+    .form-control,
+    .form-select {
+        &:focus {
+            border-color: var(--convrtr-bg-color-50-rgb);
+            box-shadow: 0 0 0 0.25rem var(--convrtr-bg-color-50-rgb);
+        }
+    }
+}
+
 .tab-content {
     padding: 0.5rem 0.65rem;
     background-color: var(--bs-white);
     border: 1px solid;
     border-color: var(--convrtr-nav-tabs-border-color);
     border-radius: var(--convrtr-nav-tabs-border-radius);    
+}
+@include color-mode(dark) {
+    .tab-content {
+        background-color: var(--bs-body-bg);
+        border-color: var(--bs-border-color);
+    }
 }
 
 .shift-tabs {
@@ -260,6 +370,17 @@ textarea {
         &.active {
             color: var(--convrtr-base-color);
             background-color: var(--convrtr-bg-color-25-rgb);
+        }
+    }
+}
+@include color-mode(dark) {
+    .shift-tabs {
+        & .nav-link {
+            color: var(--bs-white);
+            &.active {
+                color: var(--bs-white);
+                background-color: var(--convrtr-bg-color-75-rgb);
+            }
         }
     }
 }
