--- a/_includes/layout/header.liquid
+++ b/_includes/layout/header.liquid
@@ -53,7 +53,7 @@
                     aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)" title="Toggle theme"
                     data-current-icon="bi-circle-half">
                     <i class="bi my-1 theme-icon-active bi-circle-half"></i>
-                      <span class="d-lg-none ms-2" id="bd-theme-text">Toggle theme</span>
+                      <span class="d-md-none ms-2" id="bd-theme-text">Toggle theme</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme-text">
                       <li>
