--- a/_includes/partials/home/convrtrs.liquid
+++ b/_includes/partials/home/convrtrs.liquid
@@ -13,72 +13,102 @@
             </div>
             <hr>
             <p class="px-2">
-                A description of each decoder and link to more information is available using the info button in the top-right of each decoder. You can also copy the contents on individual decoders and download the contents to a text file.
+                A description of each decoder and link to more information is available using the info button in the top-right of each decoder, ou can also copy the contents on individual decoders and download the contents to a text file. By selecting the "chain decoders" option, the "decode" button under each decode switches its target to the Text decoder.
+            </p>
+            <p class="px-2">This is useful if you have a string of text that has went through numerous encoding steps, e.g. 
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    Text
+                </code>
+                 → 
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    Binary
+                </code>
+                 → 
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    Base64
+                </code>
+                 → 
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    Reverse
+                </code>
+                 → 
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    Hexadecimal
+                </code>
+                so you can quickly decode  your puzzle, without having to copy/paste into each different decoder text box.
             </p>
         </div>
-        <div class="grid g-3 collapse show" id="convrtrCollapse">
-            {% for tool in convrtrs %}
-            {% if convrtrs.length %}
-            <div class="g-col-12 g-col-md-6 g-col-lg-4 g-col-hd-3 g-col-hd-3 g-col-fhd-3">
-                <div class="card shadow-sm" id="convrtr-{{ tool.id }}">
-                    <div class="card-body">
-                        <div class="card-title d-flex align-items-center">
-                            <span class="h6 m-0 text-uppercase">
-                                <label class="card-label" for="form-{{ tool.id }}">
-                                    {{ tool.card-label }}
-                                </label>
-                            </span>
-                            {% if tool.id == "hex" %}
-                            <select id="hexDelimiter" class="form-select form-select-sm mx-2 ms-auto w-auto" aria-label="Change Hexadecimal delimiter">
-                                <option value=" " selected="">Space</option>
-                                <option value="-">Hyphen</option>
-                                <option value=":">Colon</option>
-                                <option value=",">Comma</option>
-                                <option value="\x">Slash x (\x)</option>
-                                <option value="0x">Zero x (0x)</option>
-                            </select>
-                            {% endif %}
-                            {% if tool.id == "morsenary" %}
-                            <select id="morsenarySetting" class="form-select form-select-sm mx-2 ms-auto w-auto" aria-label="Change Binary substitution">
-                                <option value="default" selected="">. = 0, - = 1</option>
-                                <option value="flipped">. = 1, - = 0</option>
-                            </select>
-                            {% endif %}
-                            <div class="d-flex align-items-center{% if tool.delimiter == false %} ms-auto{% endif %}">
-                                <a role="button" tabindex="0" class="text-convrtr px-1 border border-convrtr rounded"
-                                    aria-label="Information popover for {% if forloop.first == true %}encoding{% else %}decoding {{ tool.id }}{% endif %}"
-                                    data-bs-container="body" 
-                                    data-bs-toggle="popover" 
-                                    data-bs-placement="left" 
-                                    {% if tool.html == true %}data-bs-html="true"{% endif %}
-                                    data-bs-trigger="focus"
-                                    data-bs-content='{{ tool.popover-content }}'>
-                                    <i class="bi bi-info-circle"></i>
-                                </a>
+        <div class="collapse" id="convrtrCollapse">
+            <div class="grid">
+                <div class="form-check form-switch text-star g-col-12 mb-3">
+                    <input class="form-check-input" type="checkbox" role="switch" id="chainDecoders">
+                    <label class="form-check-label" for="chainDecoders" aria-label="Chain decoders together">Chain decoders</label>
+                </div>
+            </div>
+            <div class="grid g-3">
+                {% for tool in convrtrs %}
+                {% if convrtrs.length %}
+                <div class="g-col-12 g-col-md-6 g-col-lg-4 g-col-hd-3 g-col-hd-3 g-col-fhd-3">
+                    <div class="card shadow-sm" id="convrtr-{{ tool.id }}">
+                        <div class="card-body">
+                            <div class="card-title d-flex align-items-center">
+                                <span class="h6 m-0 text-uppercase">
+                                    <label class="card-label" for="form-{{ tool.id }}">
+                                        {{ tool.card-label }}
+                                    </label>
+                                </span>
+                                {% if tool.id == "hex" %}
+                                <select id="hexDelimiter" class="form-select form-select-sm mx-2 ms-auto w-auto" aria-label="Change Hexadecimal delimiter">
+                                    <option value=" " selected="">Space</option>
+                                    <option value="-">Hyphen</option>
+                                    <option value=":">Colon</option>
+                                    <option value=",">Comma</option>
+                                    <option value="\x">Slash x (\x)</option>
+                                    <option value="0x">Zero x (0x)</option>
+                                </select>
+                                {% endif %}
+                                {% if tool.id == "morsenary" %}
+                                <select id="morsenarySetting" class="form-select form-select-sm mx-2 ms-auto w-auto" aria-label="Change Binary substitution">
+                                    <option value="default" selected="">. = 0, - = 1</option>
+                                    <option value="flipped">. = 1, - = 0</option>
+                                </select>
+                                {% endif %}
+                                <div class="d-flex align-items-center{% if tool.delimiter == false %} ms-auto{% endif %}">
+                                    <a role="button" tabindex="0" class="text-convrtr px-1 border border-convrtr rounded"
+                                        aria-label="Information popover for {% if forloop.first == true %}encoding{% else %}decoding {{ tool.id }}{% endif %}"
+                                        data-bs-container="body" 
+                                        data-bs-toggle="popover" 
+                                        data-bs-placement="left" 
+                                        {% if tool.html == true %}data-bs-html="true"{% endif %}
+                                        data-bs-trigger="focus"
+                                        data-bs-content='{{ tool.popover-content }}'>
+                                        <i class="bi bi-info-circle"></i>
+                                    </a>
+                                </div>
                             </div>
-                        </div>
-                        <textarea placeholder="{{ tool.placeholder }}" rows="6" id="form-{{ tool.id }}" class="form-control data-to-copy active"></textarea>
-                        <div class="d-flex justify-content-between align-items-center mt-3">
-                            {% if forloop.first == true %}
-                            <button type="button" class="btn btn-md btn-convrtr" id="{{ tool.button-id }}">Encode</button>
-                            {% else %}
-                            <span tabindex="0" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ tool.button-label }}">
-                                <button type="button" class="btn btn-md btn-light" id="{{ tool.button-id }}" aria-label="{{ tool.button-label }}">
-                                    Decode
-                                </button>
-                            </span>
-                            {% endif %}
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-md btn-light btn-select" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="Select All" data-bs-original-title="Select All"><i class="bi bi-check2-square"></i></button>
-                                <button type="button" class="btn btn-md btn-light btn-copy" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="Copy to clipboard" data-bs-original-title="Copy to clipboard"><i class="bi bi-clipboard"></i></button>
-                                <button type="button" class="btn btn-md btn-light btn-download" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="Download" data-bs-original-title="Download"><i class="bi bi-download"></i></button>
+                            <textarea placeholder="{{ tool.placeholder }}" rows="6" id="form-{{ tool.id }}" class="form-control data-to-copy active"></textarea>
+                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                {% if forloop.first == true %}
+                                <button type="button" class="btn btn-md btn-convrtr" id="{{ tool.button-id }}">Encode</button>
+                                {% else %}
+                                <span tabindex="0" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ tool.button-label }}">
+                                    <button type="button" class="btn btn-md btn-light" id="{{ tool.button-id }}" aria-label="{{ tool.button-label }}">
+                                        Decode
+                                    </button>
+                                </span>
+                                {% endif %}
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-md btn-light btn-select" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="Select All" data-bs-original-title="Select All"><i class="bi bi-check2-square"></i></button>
+                                    <button type="button" class="btn btn-md btn-light btn-copy" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="Copy to clipboard" data-bs-original-title="Copy to clipboard"><i class="bi bi-clipboard"></i></button>
+                                    <button type="button" class="btn btn-md btn-light btn-download" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="Download" data-bs-original-title="Download"><i class="bi bi-download"></i></button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                {% endif %}
+                {% endfor %}
             </div>
-            {% endif %}
-            {% endfor %}
         </div>
     </div>
 </section>
