--- a/_includes/partials/files/headers.liquid
+++ b/_includes/partials/files/headers.liquid
@@ -28,12 +28,29 @@
                         <table class="table table-striped hash-table">
                             <thead class="table-success">
                                 <tr>
-                                    <th scope="col" class="col-3 col-md-2 col-lg-2">File type</th>
+                                    <th scope="col" class="col-4 col-md-4 col-lg-4">Description</th>
                                     <th scope="col">Header</th>
+                                    <th scope="col">Extensions</th>
                                 </tr>
                             </thead>
                             <tbody class="data-to-copy active" id="fileResults">
-                                {% include "partials/files/headertable" %}
+                            {% for header in headers %}
+                                {% for item in header.hex %}
+                                {% if forloop.first %}
+                                <tr>
+                                    <th scope="row" rowspan="{{ header.hex.size }}">
+                                        <span class="display-6 fs-6 fw-normal">{{ header.label }}</span>
+                                    </th>
+                                    <td>{{ item }}</td>
+                                    <td scope="row" rowspan="{{ header.hex.size }}">{{ header.extensions }}</td>
+                                </tr>
+                                {% else %}
+                                <tr>
+                                    <td>{{ item }}</td>
+                                </tr>
+                                {% endif %}
+                                {% endfor %}
+                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
