--- a/_includes/partials/files/filecheck.liquid
+++ b/_includes/partials/files/filecheck.liquid
@@ -3,7 +3,7 @@
         <div class="section-heading mb-4">
             <div class="d-flex justify-content-between section-toggle"
                 data-bs-toggle="collapse" href="#filecheckCollapse" role="button" 
-                aria-expanded="false" aria-controls="filecheckCollapse">
+                aria-expanded="true" aria-controls="filecheckCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Check file type
                 </h2>
@@ -16,7 +16,7 @@
                 Select a file to check its file type / header. Only the first 16 bytes of each file are read and then discarded, no files are actually uploaded or stored anywhere.
             </p>
         </div>
-        <div id="filecheckCollapse" class="collapse">
+        <div id="filecheckCollapse" class="collapse show">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Check file headers</span>
