Adding wiki link

--- a/_includes/partials/files/headers.liquid
+++ b/_includes/partials/files/headers.liquid
@@ -15,6 +15,9 @@
             <p class="px-2">
                 A list of common file headers in hexadecimal format, useful if you have a chunk of data so you can quickly match it with a potential file type.
             </p>
+            <p class="px-2">
+                More information is available on the <a href="https://en.wikipedia.org/wiki/List_of_file_signatures" class="text-convrtr" title="List of file signatures, Wikipedia">File signatures</a> Wikipedia page.
+            </p>
         </div>
         <div id="headersCollapse" class="collapse">
             <div class="card">
