--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,6 +56,7 @@ body {
 @include color-mode(dark) {
     .text-convrtr {
         --bs-btn-color: var(--bs-white);
+        color: rgba(var(--convrtr-bg-color-50-rgba), var(--bs-text-opacity)) !important;
     }
 }
 .bg-convrtr {
