Update buttons styles across all components
Moving away form outline and using primary block, easier to spot

--- a/_includes/partials/ciphers/sub.liquid
+++ b/_includes/partials/ciphers/sub.liquid
@@ -47,7 +47,7 @@
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" id="substitution-group" for="subKey">Key</label>
                                         <input type="text" class="form-control" id="subKey" title="Substitution cipher key">
-                                        <button class="btn btn-outline-convrtr" type="button" id="subEncrypt">Encrypt</button>
+                                        <button class="btn btn-convrtr" type="button" id="subEncrypt">Encrypt</button>
                                         {% comment %}<button class="btn btn-outline-convrtr" type="button" id="subDecrypt" title="Decryption is currently unavailable">Decrypt</button>{% endcomment %}
                                     </div>
                                 </div>
