--- a/_includes/partials/hex/shift.liquid
+++ b/_includes/partials/hex/shift.liquid
@@ -34,7 +34,7 @@
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" id="basic-addon1" for="shiftValue"><span class="d-none d-md-block">Shift&nbsp;</span>Value</label>
                                         <input type="text" class="form-control" id="shiftValue" title="Shift Hex by number, negative numbers are allowed">
-                                        <button class="btn btn-outline-convrtr" type="button" id="shiftDecode">Shift</button>
+                                        <button class="btn btn-convrtr" type="button" id="shiftDecode">Shift</button>
                                     </div>
                                 </div>
                                 <div class="col d-flex flex-fill justify-content-start mb-2">
