--- a/_includes/partials/home/replace.liquid
+++ b/_includes/partials/home/replace.liquid
@@ -35,7 +35,7 @@
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" id="basic-addon2" for="replacementValue">New<span class="d-none d-md-block">&nbsp;characters</span></label>
                                         <input type="text" class="form-control" id="replacementValue" title="New characters">
-                                        <button class="btn btn-outline-convrtr" type="button" id="replaceDecode">Replace</button>
+                                        <button class="btn btn-convrtr" type="button" id="replaceDecode">Replace</button>
                                     </div>
                                 </div>
                                 <div class="col d-flex flex-fill mb-2">
