--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -44,7 +44,7 @@
                                             <option value="urlencode">URL Encode</option>
                                             <option value="urldecode">URL Decode</option>
                                         </select>
-                                        <button class="btn btn-outline-convrtr" type="button" id="toolChange">Do the thing!</button>
+                                        <button class="btn btn-convrtr" type="button" id="toolChange">Do the thing!</button>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-auto flex-fill">
