--- a/_includes/partials/ciphers/vigenere.liquid
+++ b/_includes/partials/ciphers/vigenere.liquid
@@ -43,7 +43,7 @@
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" id="basic-addon1" for="vigenereKey">Key</label>
                                         <input type="text" class="form-control" id="vigenereKey" title="Vigenère cipher key">
-                                        <button class="btn btn-outline-convrtr" type="button" id="vigenereEncrypt">Encrypt</button>
+                                        <button class="btn btn-convrtr" type="button" id="vigenereEncrypt">Encrypt</button>
                                         <button class="btn btn-outline-convrtr" type="button" id="vigenereDecrypt">Decrypt</button>
                                     </div>
                                 </div>
