Added some labels for delimiters
Also had to remove "Do the thing!"
Keeps things in line with the rest of site

--- a/_includes/partials/hex/reversehex.liquid
+++ b/_includes/partials/hex/reversehex.liquid
@@ -32,6 +32,7 @@
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
+                                        <label class="input-group-text" for="reverseHexDelimiter">Delimiter</label>
                                         {% include "components/delimiter" %}
                                         <button type="button" class="btn btn-md btn-convrtr me-2" id="reverseHexDecode" title="Reverse hex nibbles">Reverse</button>
                                     </div>
