--- a/_includes/partials/misc/elements.liquid
+++ b/_includes/partials/misc/elements.liquid
@@ -23,7 +23,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Periodic elements conversion</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="34,7,52,7,58 → Se,N,Te,N,Ce" title="Periodic element conversion" rows="6" id="elementsTextarea" class="form-control flip-text"></textarea>
+                        <textarea placeholder="34,7,52,7,58 [Atomic Number] → Se,N,Te,N,Ce" title="Periodic element conversion" rows="6" id="elementsTextarea" class="form-control flip-text"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-2 g-0">
