--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -1,13 +1,12 @@
-<ul class="navbar-nav me-auto mt-3 mt-md-0 mb-2 mb-md-0">
+<ul class="navbar-nav me-auto mb-2">
 {% if page-id != "fourohfour" %}
     {% for link in nav %}
-        <li class="nav-item dropdown{% if page-id ==  link.id %} active{% endif %}">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="d-sm-inline-flex d-md-none d-lg-inline-flex ms-1 me-auto">{{ link.label }}</span>
-                <span class="d-none d-md-inline-flex d-lg-none ms-1 me-auto">{{ link.short-label }}</span>
+        <li class="nav-item dropdown{% if page-id ==  link.id %} active{% endif %}" data-link-id="{{ link.id }}" data-page-id="{{ page-id }}">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="{% if page-id ==  link.id %}true{% else %}false{% endif %}">
+                <span class="d-inline-flex ms-1 me-auto">{{ link.label }}</span>
             </a>
             {% if link.children %}
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu{% if page-id ==  link.id %} show{% endif %}">
                 {% for child in link.children %}
                 <li>
                     <a class="dropdown-item" href="../{% if link.id != 'home'%}{{ link.id }}/{% endif %}#{{ child.id }}">{{ child.label }}</a>
