Updating sub info to explain mixed case support

--- a/_includes/partials/ciphers/sub.liquid
+++ b/_includes/partials/ciphers/sub.liquid
@@ -30,7 +30,29 @@
                 - The full alphabet would look like 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     TESABCDFGHIJKLMNOPQRUVWXYZ
-                </code> &ndash; notice that T, E and S have moved to the start, the second T in TEST isn't present again as it has already been used and placed. There is more information available on the <a href="https://en.wikipedia.org/wiki/Substitution_cipher" class="text-convrtr">Substitution cipher</a> Wikipedia page. 
+                </code> &ndash; notice that T, E and S have moved to the start, the second T in TEST isn't present again as it has already been used and placed. 
+                Mixed case strings and keys are supported here, for example:
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    SENTence
+                </code> →
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    TEST
+                </code>
+                →
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    QBLRblsb
+                </code>
+                or 
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    SENTence
+                </code> →
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    TEst
+                </code>
+                →
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
+                    PAKQaksa
+                </code> &ndash; There is more information available on the <a href="https://en.wikipedia.org/wiki/Substitution_cipher" class="text-convrtr">Substitution cipher</a> Wikipedia page. 
             </p>
         </div>
         <div class="collapse" id="subCollapse">
