Added support for keyed caesar ciphers and updated descriptions
Made some wording changes to caesar and sub ciphers to better explain new functionality

--- a/_includes/partials/ciphers/sub.liquid
+++ b/_includes/partials/ciphers/sub.liquid
@@ -13,7 +13,7 @@
             </div>
             <hr>
             <p class="px-2">
-                Where a Caeser cipher simply shifts the position of the alphabet to the left or right a number of times, a substitution cipher uses a key or a phrease to make a new alphabet - the end result potentially being a completely jumbled up alphabet. 
+                A substitution cipher uses a key or a phrease to make a new alphabet, with the end result potentially being a completely jumbled up alphabet. 
             </p>
             <p class="px-2">
                 A quick example substitution: 
