--- a/_includes/partials/misc/forerunner.liquid
+++ b/_includes/partials/misc/forerunner.liquid
@@ -66,10 +66,16 @@
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
+                            <a class="btn btn-md btn-convrtr" id="generateForerunnerImage" title="Generate an image from Forerunner glyphs">Create image</a>
+                            <div class="form-check form-switch mx-2">
+                                <input class="form-check-input" type="checkbox" role="switch" id="frImageTransparency" checked>
+                                <label class="form-check-label" for="frImageTransparency">Transparent background</label>
+                            </div>
                             {% include "components/select-copy-dl" %}
                         </div>
                         <hr />
                         <div id="forerunnerResults" class="data-to-copy active"></div>
+                        <div id="forerunnerImageResults" class="forerunner"></div>
                     </div>
                 </div>
             </div>
