Minor styling fix for sections with background color
If the section is the last item on the page, drop the bottom border radius so that it blends better with the footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -261,6 +261,9 @@ body {
 .section:not(.footer):nth-of-type(odd) {
     @include media-breakpoint-up(fhd) {
         border-radius: var(--bs-border-radius-lg);
+        &:last-of-type {
+            border-radius: var(--bs-border-radius-lg) var(--bs-border-radius-lg) 0 0;
+        }
     }
 }
 
